Fixed some z-index issues

--- a/src/components/Buttons/FutureButton/FutureButtonStyle.module.css
+++ b/src/components/Buttons/FutureButton/FutureButtonStyle.module.css
@@ -237,7 +237,6 @@
 	height: 0;
 
 	box-shadow: 0px 0px 40px 15px var(--box-shadow-heavy);
-	z-index: -1;
 }
 
 .glow .content {
